fixed tech stack wrap

--- a/src/components/Chip/index.css
+++ b/src/components/Chip/index.css
@@ -1,7 +1,6 @@
 #chip {
     background-color: #488fb5;
     margin: 5px;
-    margin-bottom: 50px;
     padding: 7px;
     border-radius: 40px;
 }
