--- a/src/containers/About/index.css
+++ b/src/containers/About/index.css
@@ -59,7 +59,11 @@
     font-size: 1em;
     font-family: "Karla", serif;
     margin-top: 20px;
-    margin-bottom: 20px
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .about__contentBox__textCol div p {
